[gd_scene load_steps=4 format=3 uid="uid://crjiwnwuatn6u"]

[ext_resource type="Script" path="res://tools/SM to FNF Converter.gd" id="1_gfpcq"]
[ext_resource type="Texture2D" uid="uid://y8c4a1bk8wkl" path="res://assets/images/menus/menuBGDesat.png" id="2_gs7lv"]
[ext_resource type="Theme" uid="uid://br6hapg0jupnv" path="res://assets/styles/nova_purple_panel.tres" id="3_7vfew"]

[node name="SM to FNF" type="Node2D"]
script = ExtResource("1_gfpcq")

[node name="bg" type="Sprite2D" parent="."]
modulate = Color(0.133333, 0.101961, 0.152941, 1)
position = Vector2(640, 360)
texture = ExtResource("2_gs7lv")

[node name="Label" type="Label" parent="."]
offset_left = 189.0
offset_top = 39.0
offset_right = 371.0
offset_bottom = 91.0
text = "converter not done yet. also it doesnt work at all :skull:
sorry nothing"

[node name="Panel" type="Panel" parent="."]
offset_left = 77.0
offset_top = 93.0
offset_right = 533.0
offset_bottom = 576.0
theme = ExtResource("3_7vfew")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 21.0
offset_right = 186.0
offset_bottom = 47.0
text = "sm to fnf converyter"

[node name="player1" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 63.0
offset_right = 247.0
offset_bottom = 101.0
placeholder_text = "player1"

[node name="player2" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 108.0
offset_right = 247.0
offset_bottom = 146.0
placeholder_text = "player2"

[node name="spectator" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 153.0
offset_right = 247.0
offset_bottom = 191.0
placeholder_text = "spectator"

[node name="scroll_speed" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 199.0
offset_right = 247.0
offset_bottom = 237.0
placeholder_text = "scroll speed"

[node name="song_name" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 245.0
offset_right = 248.0
offset_bottom = 283.0
placeholder_text = "song name"

[node name="snapping" type="SpinBox" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 288.0
offset_right = 248.0
offset_bottom = 326.0
min_value = 4.0
max_value = 192.0
value = 16.0

[node name="Panel2" type="Panel" parent="."]
offset_left = 655.0
offset_top = 103.0
offset_right = 1205.0
offset_bottom = 328.0
theme = ExtResource("3_7vfew")

[node name="Button" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 24.0
offset_top = 55.0
offset_right = 217.0
offset_bottom = 102.0
text = "Select (.sm) files"

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 33.0
offset_top = 131.0
offset_right = 202.0
offset_bottom = 157.0
text = "Current File Selected: "

[node name="Panel3" type="Panel" parent="."]
offset_left = 655.0
offset_top = 351.0
offset_right = 1205.0
offset_bottom = 576.0
theme = ExtResource("3_7vfew")

[node name="Button" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 24.0
offset_top = 55.0
offset_right = 217.0
offset_bottom = 102.0
text = "Export FNF json chart"

[node name="Label" type="Label" parent="Panel3"]
layout_mode = 0
offset_left = 33.0
offset_top = 131.0
offset_right = 202.0
offset_bottom = 157.0
text = "Path Selected: "

[connection signal="pressed" from="Panel3/Button" to="." method="_on_button_pressed"]
